Correciones realizadas